gcc/testsuite/algol68/compile/mcts/mdeq03.a68
# { dg-options "-fstropping=upper" }  #

# Mode equivalencing.  #
BEGIN MODE M = PROC(M)M,
           N = PROC(N)N,
           O = UNION(N,M); # { dg-error "" }  #
      SKIP
END
